# svsal-poco

./: .gitignore  README.md  app.py  env.template  eval_byt5_slurm.sh  infer.py  infer.sh  main.py  prepare_viper.sh  pyproject.toml  requirements.txt  test-byt5.sh  test_boundary.sh  test_byt5.sh  tokenize_byt5_slurm.sh  train_boundary.sh  train_byt5.sh  train_byt5_slurm.sh  train_byt5_slurm_chain.sh  upload_from_viper.sh
.github/workflows/: sync-to-hf-space.yml
boundary_classifier/: boundary_classifier.py
byt5/: train_byt5.py  train_byt5_slurm..py
data/: check_data.py  data_utils.py
data/prepare_data/: runme.sh
data/prepare_data/scripts/: 01_create_jsonl.xsl  02_adjust_shifted_lbs.py  03_denormalize.py  04_check_lb_positions.py  05_check_compare.py  06_analyze_diffs.py
evaluation/: evaluation.py  streaming_eval_trainer.py
infer/: __init__.py
tei/: tei_roundtrip.py
