[project]
name = "svsal-poco"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.0",
    "huggingface-hub>=0.22.0",
    "jiwer>=4.0.0",
    "scikit-learn>=1.3.0",
    "tensorboard>=2.20.0",
    # "torch==2.6.0",
    "transformers>=4.40.0",
    "codecarbon>=2.3.0",
    "wandb>=0.16.0",
    # "flash-attn",
    "sentencepiece",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "evaluation", "boundary_classifier", "byt5", "infer"]

[project.scripts]
train-boundary = "boundary_classifier.boundary_classifier:main"
train-byt5 = "byt5.train_byt5:main"
infer = "infer:main"
